Formatted all code